<resources>
    <string name="app_name">hibmobtech</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="mapKey">AIzaSyDD5e53zu2rcNeJqpWS_lzlQs5XWPudOuQ</string>

    <!--<string name="action_settings">Settings</string>-->
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Paramètres</string>
    <string name="search_hint">Chercher</string>
    <string name="main_menu_title_equipment">Equipements</string>
    <string name="main_menu_title_site">Sites</string>
    <string name="main_menu_title_picture">Photo</string>
    <string name="menu_clear_history">Supprimer l\'historique</string>
    <string name="reference">reference</string>
    <string name="category">category</string>
    <string name="brand">brand</string>
    <string name="price">price</string>
    <string name="date">date</string>
    <string name="sites">Sites</string>
    <string name="equipements">Equipements</string>
    <string name="Interventions">Interventions</string>
    <string name="facturation">Facturation</string>
    <string name="user">User?</string>
    <string name="adress1">adress1</string>
    <string name="adress2">adress2</string>
    <string name="standard">Standard</string>
    <string name="tel">Tel</string>
    <string name="fax">Fax</string>
    <string name="mail">Mail</string>
    <string name="tel_standard">0626304050</string>
    <string name="tel_fax">0826304050</string>
    <string name="a_implementer">à implémenter</string>
    <string name="appeler">Appeler</string>
    <string name="envoyer">Envoyer</string>
    <string name="aller">Aller</string>
    <string name="adresse">Adresse</string>
    <string name="contact">Contact</string>
    <string name="note">Note</string>
    <string name="name">name</string>
    <string name="home">Home</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="preferences">Mes préférences</string>
    <string name="connection">Connection</string>
    <string name="personnel">Personnel</string>
    <string name="agenda">Mon agenda</string>
    <string name="favoris">Mes favoris</string>
    <string name="mes_mroRequests">Mes interventionss</string>
    <string name="contrats">Mes contrats</string>
    <string name="hibmob">HibMob</string>
    <string name="carte">Carte</string>
    <string name="details_site">Détails site</string>
    <string name="commentaires">commentaires</string>
    <string name="exit">Exit</string>
    <string name="tracking">Tracking</string>
    <string name="oui_non">Oui/Non</string>
    <string name="tracking_non">tracking : Non</string>
    <string name="tracking_on">Tracking On</string>
    <string name="mro_request_detail">Détail de l\'intervention</string>
    <string name="mro_request_signature">Signature du client</string>
    <string name="search_causes">Chercher causes...</string>
    <string name="search_tasks">Chercher travaux...</string>
    <string name="fiche_intervention">Fiche d\'intervention</string>
    <string name="search_spare_part">Chercher pièce détachée...</string>
    <string name="checked_mark"><b>\u2713</b></string>
    <string name="exclamation_point"><b>!</b></string>

    <string name="BottomSheetBehaviorGoogleMapsLike">com.hibernatus.hibmobtech.custombottomsheetbehavior.BottomSheetBehaviorGoogleMapsLike</string>


    <!-- Font Awesome Icons  -->
    <string name="icon_fa_map_signs">&#xf277;</string>
    <string name="icon_fa_university">&#xf19c;</string>
    <string name="icon_fa_simplybuilt">&#xf215;</string>
    <string name="icon_fa_phone">&#xf095;</string>
    <string name="icon_fa_home">&#xf277;</string>
    <string name="icon_fa_star">&#xf005;</string>
    <string name="icon_fa_th_list">&#xf00b;</string>
    <string name="icon_fa_question">&#xf059;</string>
    <string name="icon_fa_truck">&#xf0d1;</string>
    <string name="icon_fa_envelope">&#xf003;</string>
    <string name="icon_fa_stethoscope">&#xf0f1;</string>
    <string name="icon_fa_money">&#xf0d6;</string>
    <string name="icon_fa_lock">&#xf023;</string>
    <string name="icon_fa_unlock">&#xf09c;</string>
    <string name="icon_fa_times">&#xf00d;</string>
    <string name="icon_fa_check">&#xf00c;</string>
    <string name="icon_fa_pencil">&#xf040;</string>
    <string name="icon_fa_eye">&#xf06e;</string>
    <string name="icon_fa_calendar">&#xf073;</string>
    <string name="icon_fa_sort_desc">&#xf0dd;</string>
    <string name="icon_fa_play">&#xf04b;</string>
    <string name="icon_fa_stop">&#xf04d;</string>
    <string name="icon_fa_camera">&#xf030;</string>
    <string name="icon_fa_info_circle">&#xf05a;</string>
    <string name="icon_fa_paperclip">&#xf0c6;</string>

    <string name="map">Carte</string>
    <string name="pictures">Pictures</string>

    <string name="hide">HIDE</string>
    <string name="more">MORE</string>
    <string name="sample_widget">Picasso Sample Widget</string>
    <string name="sample_notification">Picasso Sample Notification</string>
    <string name="select_picture">Select Picture</string>
  <string name="disk_cache_description">On Ice Cream Sandwich and above, a disk cache is
    automatically used so that subsequent requests for the same URL do not re-download the
    image.\n\nTo enable this functionality on pre-ICS use a standalone HTTP client with caching such
    as OkHttp.
  </string>
</resources>
