<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:activity=".HibMobHome">
    <item
        android:id="@+id/mainMenuStartItem"
        android:title="Démarrer"
        android:textSize="30sp"
        android:textColor="@color/md_green_500"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mainMenuFinishItem"
        android:title="Terminer"
        android:textSize="30sp"
        android:textColor="@color/md_amber_800"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mainMenuMroStartDateItem"
        android:title=""
        android:textSize="30sp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mainMenuCheckItem"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="ic_done_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mainMenuDeleteItem"
        android:title="Supprimer"/>
    <item
        android:id="@+id/mainMenuUpdateItem"
        android:title="Modifier"/>
    <item
        android:id="@+id/mainMenuSiteItem"
        android:title="@string/main_menu_title_site"/>
    <item
        android:id="@+id/mainMenuEquipmentItem"
        android:title="@string/main_menu_title_equipment"/>
    <item
        android:id="@+id/mainMenuMapItem"
        android:title="@string/map"/>
    <item
        android:id="@+id/mainMenuPictureItem"
        android:title="@string/pictures"/>
    <item
        android:id="@+id/mainMenuGridViewPictureItem"
        android:title="Grille"/>
    <item
        android:id="@+id/mainMenuGalleryPictureItem"
        android:title="Galerie"/>
</menu>
