<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="1dp"
    android:background="@color/md_white_1000">

    <ImageView
        android:id="@+id/sparePartListRowAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_vertical" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/sparePartListRowDescriptionTextView"
            android:text="title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/md_black_1000" />
        <TextView
            android:id="@+id/sparePartListRowCategoryTextView"
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/sparePartListRowReferenceTextView"
            android:text="@string/reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textIsSelectable="true" />
        <TextView
            android:id="@+id/sparePartListRowBrandTextView"
            android:text="@string/brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/sparePartListRowPriceTextView"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>

