<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_marginBottom="1dp"
    android:background="@color/md_white_1000" >
    <ImageView
        android:id="@+id/siteListRowAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_centerVertical="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:orientation="vertical"
        android:layout_toStartOf="@+id/site_list_row_map_icon"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/site_list_row_name_text"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_black_1000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/site_list_row_adress1_text"
            android:text="@string/adress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/site_list_row_adress2_text"
            android:text="@string/adress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/site_list_row_map_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:src="@mipmap/ic_google_map"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_centerVertical="true" />
</RelativeLayout>

