<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/machineListRowLinearLayout1"
    android:background="@color/md_white_1000"
    android:paddingLeft="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/machineListRowLinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/md_white_1000"
        android:paddingLeft="4dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/machineListRowLinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:weightSum="2">

            <ImageView
                android:id="@+id/machineListRowAvatarImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp" />

            <LinearLayout
                android:id="@+id/machineListRowLeftVerticalLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_weight="1.2"
                android:background="@color/md_white_1000"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/machineListRowReferenceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reference"
                    android:textColor="@color/md_black_1000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/machineListRowCategoryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/machineListRowBrandTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/machineListRowRightVerticalLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.8"
                android:background="@color/md_white_1000"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/md_white_1000"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/machineListRowTitleSerialNumberTextView"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="No série"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/machineListRowSerialNumberTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="5"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/machineListRowThirdLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/md_white_1000"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/machineListRowTitlePurchaseDateTextView"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="Date d'achat"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/machineListRowPurchaseDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="12 oct. 2016"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


